@@ -1,5 +1,11 @@
 linuxmuster-linbo7 (4.0.7-0) lmn71; urgency=low
 
+  * Fix #49: Group specific start.conf is not downloaded on linbo client with capitalized name.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 28 Jan 2022 16:48:00 +0100
+
+linuxmuster-linbo7 (4.0.7-0) lmn71; urgency=low
+
   * Fix #48: syntax error in hostname and mac address queries.
 
  -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 18 Jan 2022 12:34:00 +0100
